--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@applitools/eyes-cypress": "^3.13.4",
     "cypress": "^4.12.1"
+  },
+  "dependencies": {
+    "dotenv": "^8.2.0"
   }
 }
